@@ -35,6 +35,27 @@
             <summary>
             </summary>
             <bugs>
+                <bug id="1769" tool="jira">
+                    <description>
+                    	Added get-/setProperty() methods to (un-)Marshaller so that properties 
+                    	can be set programmatically.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20070515</date>
+                </bug>
                 <bug id="1982" tool="jira">
                     <description>
                     	Fixed a problem with namespace processing in the context of 
